# generic_api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
database/: .gitignore  Cargo.toml
database/src/: errors.rs  lib.rs  pool.rs
database/src/api_key/: api_key_validation.rs  mod.rs  model.rs  request_new_key.rs
database/src/get_request/: find_user_route.rs  get_all_routes.rs  mod.rs  model.rs  new_endpoint.rs
docker/arangodb_data_container/engine-rocksdb/: 000102.sst  000119.sst  000121.sst  000124.sst  000126.sst  IDENTITY  MANIFEST-000086  OPTIONS-000107  OPTIONS-000109
migrations/2020-02-22-153835_create_routes/: down.sql  up.sql
migrations/2020-03-02-004210_api_keys_and_get_requests/: down.sql  up.sql
models/: Cargo.toml
models/src/: api_key.rs  get_request.rs  lib.rs
src/: errors.rs  main.rs
src/configuration/: cli_args.rs  mod.rs
src/database/: mod.rs  pool.rs  schema.rs
src/database/api_key/: api_key_validation.rs  mod.rs  model.rs  request_new_key.rs
src/database/get_request/: find_user_route.rs  get_all_routes.rs  model.rs  new_endpoint.rs
src/routes/: mod.rs
src/routes/hello/: mod.rs
src/routes/user_endpoints/: mod.rs  model.rs  validate_api_key.rs
src/routes/user_endpoints/service/: find_user_route.rs  get_all.rs  get_all_routes.rs  mod.rs  new_endpoint.rs  request_new_key.rs
web-api/: Cargo.toml
web-api/src/: errors.rs  main.rs
web-api/src/configuration/: cli_args.rs  mod.rs
web-api/src/routes/: mod.rs
web-api/src/routes/admin/: mod.rs  users_get_request.rs  validate_api_key.rs
web-api/src/routes/non_admin/: hello.rs  mod.rs  request_new_key.rs
