[package]
name = "generic_api"
version = "0.1.0"
authors = ["Ryan Pascal <ryan.david.pascal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
actix-web = "2.0"
actix-rt = "1.0"
actix = "0.9"

diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "chrono", "r2d2"] }

uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

anyhow = "1.0"
thiserror = "1.0"
num = "0.2"
shrinkwraprs = "0.2"

structopt = "0.3"

regex = "1"
