[package]
name = "web-api"
version = "0.1.0"
authors = ["Ryan Pascal <ryan.david.pascal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
models = { path = "../models" }

dotenv = "0.15"
actix-web = {version = "2.0", features = []}
actix-rt = "1.0"
futures = "0.3"
failure = "0.1.6"
actix-http="1.0.1"
actix-service="1.0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
structopt = "0.3"
env_logger = "0.7"
